<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainScreenActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:text="Welcome to"
        android:textColor="@color/black"
        android:textSize="30dp"

        android:layout_marginTop="50dp"
        android:layout_centerHorizontal="true"
        android:fontFamily="@font/robotomedium" />

    <ImageView
        android:layout_width="200dp"
        android:layout_height="100dp"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="115dp"
        android:layout_marginTop="80dp"
        android:src="@drawable/logo" />


    <ImageView
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:src="@drawable/play"
        android:layout_marginTop="200dp"
        android:layout_marginStart="50dp"/>
    <ImageView
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:src="@drawable/play"
        android:layout_marginTop="260dp"
        android:layout_marginStart="50dp"/>
    <ImageView
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:src="@drawable/play"
        android:layout_marginTop="320dp"
        android:layout_marginStart="50dp"/>
    <ImageView
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:src="@drawable/play"
        android:layout_marginTop="380dp"
        android:layout_marginStart="50dp"/>

    <TextView

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pointone"
        android:textColor="@color/black"
        android:fontFamily="@font/robotomedium"
        android:layout_marginTop="200dp"
        android:layout_marginStart="90dp"
        android:textSize="20dp"/>
    <TextView

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pointtwo"
        android:textColor="@color/black"
        android:fontFamily="@font/robotomedium"
        android:layout_marginTop="260dp"
        android:layout_marginStart="90dp"
        android:textSize="20dp"/>
    <TextView

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pointthree"
        android:textColor="@color/black"
        android:fontFamily="@font/robotomedium"
        android:layout_marginTop="320dp"
        android:layout_marginStart="90dp"
        android:textSize="20dp"/>
    <TextView

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pointfor"
        android:textColor="@color/black"
        android:fontFamily="@font/robotomedium"
        android:layout_marginTop="380dp"
        android:layout_marginStart="90dp"
        android:textSize="20dp"/>
    <TextView

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pointfive"
        android:textColor="@color/black"
        android:fontFamily="@font/robotomedium"
        android:layout_marginTop="440dp"
        android:layout_marginStart="90dp"
        android:textSize="20dp"/>

    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="500dp"
        android:background="@drawable/round_button"
        android:text="Join Mos3if"
        android:textColor="@color/white"
        android:textSize="20dp"
        android:fontFamily="@font/robotomedium"
        android:backgroundTint="@color/primary_color"
        android:layout_centerHorizontal="true"/>
    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="570dp"
        android:background="@drawable/btn_login"
        android:text="Login to Mos3if"
        android:textSize="20dp"
        android:fontFamily="@font/robotomedium"

        android:textAllCaps="false"
        android:layout_centerHorizontal="true"/>

</RelativeLayout>